--- a/city-connections-service.properties
+++ b/city-connections-service.properties
@@ -1,1 +1,24 @@
+##Springboot properties
+server.port=8082
 
+#Eureka
+eureka.client.service-url.defaultZone=http://itinerary-eureka-server:8761/eureka
+eureka.instance.hostname=itinerary-eureka-server
+eureka.instance.prefer-ip-address=false
+
+#H2 DB
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+#### SWAGGER DOCUMENTATION ####
+swagger.contact.name=Jordi Ribes Bonet
+swagger.contact.url=
+swagger.contact.email=jribes@gmail.com
+swagger.api.title=City Connections Service
+swagger.api.description=API's that provide city connections information
+swagger.api.version=1.0
+swagger.api.tosUrl=
+swagger.api.license=
+swagger.api.licenseUrl=
+swagger.api.produces=application/json
+swagger.api.consumes=
