--- a/city-connections-service.properties
+++ b/city-connections-service.properties
@@ -1,19 +1,22 @@
 ##Springboot properties
 server.port=8082
 
-#Eureka
-eureka.client.service-url.defaultZone=http://itinerary-eureka-server:8761/eureka
-eureka.instance.hostname=itinerary-eureka-server
-eureka.instance.prefer-ip-address=false
+#Configer loading properties
+spring.cloud.config.overrideSystemProperties=false
 
 #H2 DB
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
+#Eureka
+eureka.client.service-url.defaultZone=http://itinerary-eureka-server:8761/eureka
+eureka.instance.hostname=itinerary-eureka-server
+eureka.instance.prefer-ip-address=false
+
 #### SWAGGER DOCUMENTATION ####
 swagger.contact.name=Jordi Ribes Bonet
 swagger.contact.url=
-swagger.contact.email=jribes@gmail.com
+swagger.contact.email=jordi.ribes@fonyou.com
 swagger.api.title=City Connections Service
 swagger.api.description=API's that provide city connections information
 swagger.api.version=1.0
