--- a/itinerary-eureka-server.properties
+++ b/itinerary-eureka-server.properties
@@ -1,1 +1,7 @@
+#Springboot properties
+spring.application.name=itinerary-eureka-server
+server.port=8761
 
+#Eureka properties
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
