--- a/itinerary-service.properties
+++ b/itinerary-service.properties
@@ -2,6 +2,9 @@
 spring.application.name=itinerary-service
 server.port=8081
 
+#Configer loading properties
+spring.cloud.config.overrideSystemProperties=false
+
 #Eureka
 eureka.client.service-url.defaultZone=http://itinerary-eureka-server:8761/eureka
 eureka.instance.hostname=itinerary-eureka-server
