--- a/city-connections-service.properties
+++ b/city-connections-service.properties
@@ -16,7 +16,7 @@ eureka.instance.prefer-ip-address=false
 #### SWAGGER DOCUMENTATION ####
 swagger.contact.name=Jordi Ribes Bonet
 swagger.contact.url=
-swagger.contact.email=jordi.ribes@fonyou.com
+swagger.contact.email=jribes@gmail.com
 swagger.api.title=City Connections Service
 swagger.api.description=API's that provide city connections information
 swagger.api.version=1.0
