--- a/itinerary-service.properties
+++ b/itinerary-service.properties
@@ -9,6 +9,9 @@ eureka.client.service-url.defaultZone=http://itinerary-eureka-server:8761/eureka
 eureka.instance.hostname=itinerary-eureka-server
 eureka.instance.prefer-ip-address=false
 
+#Ribbon
+city-connections-service.ribbon.listOfServers=http://city-connections-service:8082
+
 #### SWAGGER DOCUMENTATION ####
 swagger.contact.name=Jordi Ribes Bonet
 swagger.contact.url=
