--- a/itinerary-service-local.properties
+++ b/itinerary-service-local.properties
@@ -1,3 +1,6 @@
 #Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
+
+#Ribbon
+city-connections-service.ribbon.listOfServers=http://localhost:8082
